--- a/pantry-tracker-frontend/package.json
+++ b/pantry-tracker-frontend/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.14.5",
     "@welldone-software/why-did-you-render": "^6.2.1"
   }
 }
